# ProjectC_Runner3D

./: .gitignore  Build_Debug.bat  CMakeLists.txt  GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat  HotReload_vs2019.bat  HotReload_vs2022.bat  README.md  Run_Debug.bat  Run_MinSizeRel.bat  Run_RelWithDebInfo.bat  Run_Release.bat
GameEngine/CrashModule/Src/: CrashModule.cpp
GameEngine/FileModule/Inc/: FileModule.h
GameEngine/MathModule/Inc/: Mat3x3.h  Mat4x4.h  Quat.h  Transform.h
GameEngine/MathModule/Src/: MathModule.cpp
GameEngine/Script/: CompressAstc.bat  CompressAstc.lua  RunProcess.bat
Module/CrashModule/: CMakeLists.txt
Module/CrashModule/Inc/: CrashModule.h
Module/FileModule/: CMakeLists.txt
Module/FileModule/Src/: FileModule.cpp
Module/MathModule/: CMakeLists.txt
Module/MathModule/Inc/: Mat2x2.h  Mat3x3.h  Mat4x4.h  MathModule.h  Quat.h  Transform.h  Vec2.h  Vec3.h  Vec4.h
Module/MathModule/Src/: Mat2x2.inl  Mat3x3.inl  Mat4x4.inl  MathModule.cpp  Quat.inl  Transform.inl  Vec2.inl  Vec3.inl  Vec4.inl
Resource/Model/: Character.gltf  Idle.gltf  Jump.gltf  Run.gltf  Running.gltf  Zombie.gltf
Runner3D/Inc/: Assertion.h  AudioManager.h  Camera.h  Clip.h  CrossFadeController.h  EntityManager.h  GLTFLoader.h  GameTimer.h  GeometryPass2D.h  GeometryPass3D.h  GlyphPass2D.h  IEntity.h  IManager.h  IResource.h  IndexBuffer.h  InputManager.h  Macro.h  Pose.h  RenderManager.h  ResourceManager.h  SDLConfig.h.in  SDLManager.h  Shader.h  ShadowMap.h  Skeleton.h  SkinnedMesh.h  Skybox.h  SkyboxPass.h  Sound.h  SpritePass2D.h  StaticMesh.h  TTFont.h  Texture2D.h  Track.h  TransformTrack.h  Vertex2D.h  Vertex3D.h  VertexAttribute.h
Runner3D/Res/: Resource.rc.in  resource.h
Runner3D/Src/: AudioManager.cpp  Camera.cpp  Clip.cpp  CrossFadeController.cpp  EntityManager.cpp  GLTFLoader.cpp  GameTimer.cpp  GeometryGenerator.cpp  GeometryPass2D.cpp  GeometryPass3D.cpp  GlyphPass2D.cpp  IndexBuffer.cpp  InputManager.cpp  Main.cpp  Pose.cpp  RenderManager.cpp  ResourceManager.cpp  SDLManager.cpp  Shader.cpp  ShadowMap.cpp  Skeleton.cpp  SkinnedMesh.cpp  Skybox.cpp  SkyboxPass.cpp  Sound.cpp  SpritePass2D.cpp  StaticMesh.cpp  StringUtils.cpp  TTFont.cpp  Texture2D.cpp  Track.cpp  TransformTrack.cpp  VertexAttribute.cpp
Shader/: GeometryPass2D.frag  GeometryPass2D.vert  GlyphPass2D.frag  LightPass.frag  LightPass_NoSkinning.vert  LightPass_Skinning.vert  Shader.frag  Shader.vert  ShadowPass_Skinning.vert  SkyboxPass.frag  SpritePass2D.frag  SpritePass2D.vert
