cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(PROJECT_NAME "FileModule")

set(FILE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(FILE_MODULE_INCLUDE "${FILE_MODULE_PATH}/Inc")
set(FILE_MODULE_SOURCE "${FILE_MODULE_PATH}/Src")

file(GLOB_RECURSE FILE_MODULE_INCLUDE_FILE "${FILE_MODULE_INCLUDE}/*")
file(GLOB_RECURSE FILE_MODULE_SOURCE_FILE "${FILE_MODULE_SOURCE}/*")

add_library(${PROJECT_NAME} STATIC ${FILE_MODULE_INCLUDE_FILE} ${FILE_MODULE_SOURCE_FILE})

target_include_directories(${PROJECT_NAME} PUBLIC ${FILE_MODULE_INCLUDE})
target_link_libraries(${PROJECT_NAME} Shlwapi.lib)

set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

source_group(Inc FILES ${FILE_MODULE_INCLUDE_FILE})
source_group(Src FILES ${FILE_MODULE_SOURCE_FILE})