cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(PROJECT_NAME "MathModule")

set(MATH_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(MATH_MODULE_INCLUDE "${MATH_MODULE_PATH}/Inc")
set(MATH_MODULE_SOURCE "${MATH_MODULE_PATH}/Src")

file(GLOB_RECURSE MATH_MODULE_INCLUDE_FILE "${MATH_MODULE_INCLUDE}/*")
file(GLOB_RECURSE MATH_MODULE_SOURCE_FILE "${MATH_MODULE_SOURCE}/*")

add_library(${PROJECT_NAME} STATIC ${MATH_MODULE_INCLUDE_FILE} ${MATH_MODULE_SOURCE_FILE})

target_include_directories(${PROJECT_NAME}  PUBLIC ${MATH_MODULE_INCLUDE} ${MATH_MODULE_SOURCE})

set_property(TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

source_group(Inc FILES ${MATH_MODULE_INCLUDE_FILE})
source_group(Src FILES ${MATH_MODULE_SOURCE_FILE})